redis is working:

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ DB_NAME=postgres_test
 
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=admin
+
+RD_HOST=redis
+RD_PORT=6379
+RD_Q_NAME=testing
+RD_DB=0
