--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,33 @@
 services:
+  redis:
+    image: redis:latest
+    container_name: redis_server
+    ports:
+      - "6379:6379"
+    networks:
+      - redis
+    healthcheck:
+      test: "redis-cli ping"
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - redis_data:/data
+
+  test-publisher:
+    hostname: test-publisher
+    image: dragosbucur1105/nn_worker:latest
+    environment:
+      REDIS_HOST: ${RD_HOST}
+      REDIS_PORT: ${RD_PORT}
+      REDIS_NAME: ${RD_Q_NAME}
+      REDIS_DB: ${RD_DB}
+    networks:
+      - redis
+    depends_on:
+      redis:
+        condition: service_healthy
+
   test-service:
     hostname: test-service
     image: dragosbucur1105/testing-docker-hub:latest
@@ -55,6 +84,8 @@ services:
 
 networks:
   db:
+  redis:
 
 volumes:
   db_data:
+  redis_data:
