--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,27 @@
 services:
+  kong:
+    image: kong:latest
+    container_name: kong
+    networks:
+      - kong
+      - metrics
+    ports:
+      - "8000:8000"
+      - "8001:8001"
+      - "8443:8443"
+      - "8444:8444"
+    environment:
+      KONG_DATABASE: "off"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+      KONG_DECLARATIVE_CONFIG: /opt/kong/kong.yml
+    command: "kong start"
+    volumes:
+      - ./kong-config:/opt/kong
+
   redis:
     image: redis:latest
     container_name: redis_server
@@ -44,6 +67,7 @@ services:
         condition: service_healthy
     networks:
       - metrics
+      - kong
       - db
 
   postgres:
@@ -127,6 +151,7 @@ networks:
   db:
   redis:
   metrics:
+  kong:
 
 volumes:
   db_data:
