--- a/stack.play_with_docker.env
+++ b/stack.play_with_docker.env
@@ -2,13 +2,14 @@ DB_HOST=postgres
 DB_USER=admin22
 DB_PASSWORD=admin22
 DB_NAME=postgres_test
+DATABASE_URI=postgresql://admin22:admin22@postgres:5432/web_app
 
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=admin
 
 RD_HOST=redis
 RD_PORT=6379
-RD_Q_NAME=testing
+RD_Q_NAME=trainer_queue
 RD_DB=0
 
 GRAFANA_USER=admin
