--- a/.env
+++ b/.env
@@ -2,14 +2,25 @@ DB_HOST=postgres
 DB_USER=admin22
 DB_PASSWORD=admin22
 DB_NAME=postgres_test
+DATABASE_URI=postgresql://admin22:admin22@postgres:5432/web_app
 
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=admin
 
 RD_HOST=redis
 RD_PORT=6379
-RD_Q_NAME=testing
+RD_Q_NAME=trainer_queue
 RD_DB=0
 
 GRAFANA_USER=admin
 GRAFANA_PASS=admin
+
+CONFIG_ROOT=/home/dragos/all/poli/idp/testing/integration
+
+RUNNER_PORT=5002
+API_KEY=supersecret
+JWT_SECRET=supersecret
+
+NN_MODELS_BUCKET=nn_models
+NN_DATASETS_BUCKET=nn_datasets
+WEB_SERVER_PORT=5000
