--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -13,15 +13,44 @@ scrape_configs:
   static_configs:
   - targets:
     - localhost:9090
-- job_name: test-service
+- job_name: web_service
   honor_timestamps: true
   scrape_interval: 15s
   scrape_timeout: 10s
-  metrics_path: /metrics
+  metrics_path: /metrics  # Adjust the metrics path if different
   scheme: http
   static_configs:
   - targets:
-    - test-service:5000
+    - localhost:5000  
+
+- job_name: nn_worker
+  honor_timestamps: true
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  metrics_path: /metrics  
+  scheme: http
+  static_configs:
+  - targets:
+    - localhost:8000
+
+- job_name: nn_runner
+  honor_timestamps: true
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  metrics_path: /metrics  
+  scheme: http
+  static_configs:
+  - targets:
+    - localhost:5002 
+# - job_name: test-service
+#   honor_timestamps: true
+#   scrape_interval: 15s
+#   scrape_timeout: 10s
+#   metrics_path: /metrics
+#   scheme: http
+#   static_configs:
+#   - targets:
+#     - test-service:5000
 - job_name: 'kong'
   static_configs:
     - targets: ['kong:8001']
